--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
+    "react-toastify": "^9.1.3",
     "remixicon": "^4.0.1"
   },
   "devDependencies": {
